welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:11: error: '(' expected but identifier found.
  if nbrebiscuit>=3){
     ^Poucet:18: error: illegal start of simple expression
  }
  ^